--- a/src/components/CopyResumeButton.astro
+++ b/src/components/CopyResumeButton.astro
@@ -3,7 +3,7 @@
 import introData from '../content/intro/data.json';
 import experienceData from '../content/experience/data.json';
 import educationData from '../content/education/data.json';
-import skillsData from '../content/skills/data.json';
+import skillsDatabase from '../content/skillsDatabase.json';
 import projectsData from '../content/projects/data.json';
 import publicationsData from '../content/publications/data.json';
 import miscData from '../content/misc/data.json';
@@ -13,7 +13,7 @@ const machineReadableCV = {
   profile: introData,
   experience: experienceData,
   education: educationData,
-  skills: skillsData,
+  skills: skillsDatabase.skills,
   projects: projectsData,
   publications: publicationsData,
   awards: miscData.awards,
@@ -35,7 +35,7 @@ const cvJSON = JSON.stringify(machineReadableCV, null, 2);
     id="download-pdf-btn"
     type="button"
     aria-label="Download printable CV (PDF)"
-    title="Download CV as PDF"
+    title="Download CV"
   >
     <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
@@ -53,7 +53,7 @@ const cvJSON = JSON.stringify(machineReadableCV, null, 2);
     id="copy-resume-btn"
     type="button"
     aria-label="Copy machine-readable CV (JSON) to clipboard"
-    title="Copy CV as JSON"
+    title="Copy CV"
     data-cv={cvJSON}
   >
     <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
